--- a/src/app/web/src/main/webapp/assets/css/whiteboard.css
+++ b/src/app/web/src/main/webapp/assets/css/whiteboard.css
@@ -32,6 +32,36 @@
     margin-bottom: 10px;
 }
 
+.custom-generic-button-with-icon {
+    width: 100%;
+    padding: 10px;
+    color: black;
+    cursor: pointer;
+    border: 1px solid black;
+    background-color: white;
+    margin-top: 15px;
+    height: 45px;
+    font-size: 13px;
+    align-items: center;
+    vertical-align: center;
+}
+
+.custom-generic-button-with-icon > img {
+    height: 30px;
+    width: 30px;
+}
+
+.custom-generic-button-with-icon:hover {
+    color: white;
+    background-color: black;
+    transition-duration: 200ms;
+    transition-timing-function: ease-out;
+}
+
+.custom-generic-button-with-icon > img:hover {
+    filter: invert(100%);
+}
+
 #tools-container {
     display: flex;
     align-items: center;
@@ -67,4 +97,46 @@
     width: 100%;
     height: 100%;
     border: 2px solid black;
+}
+
+/* ------ PARTICIPANTS BUTTON MODAL ------ */
+.modal {
+    display: none;      /* invisible by default */
+    position: fixed;        /* keep in place */
+    z-index: 1;     /* on top of page when displayed */
+    left: 0;
+    right: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;         /* enable scroll if needed */
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;       /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.close {        /* popup close button */
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.participants-list {
+    display: flex;
+    flex-direction: column;
 }
