--- a/src/app/web/src/main/webapp/assets/css/whiteboard.css
+++ b/src/app/web/src/main/webapp/assets/css/whiteboard.css
@@ -119,7 +119,7 @@
     margin: 15% auto;       /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 80%;
+    width: 30%;
 }
 
 .close {        /* popup close button */
@@ -139,4 +139,11 @@
 .participants-list {
     display: flex;
     flex-direction: column;
+    width: 50%;
+    margin: 10px;
+}
+
+.whiteboard-participant {
+    margin: 5px;
+    font-size: 18px;
 }
