started homepage restyling

--- a/src/app/web/src/main/webapp/assets/css/homepage.css
+++ b/src/app/web/src/main/webapp/assets/css/homepage.css
@@ -1,134 +1,272 @@
-#whiteboard-type{
-    display: flex;
-}
-
-.whiteboard-search{
+.main-container {
     display: flex;
     align-items: center;
-    width: 80%;
-}
-
-#whiteboards{
-    display: flex;
-    width: 90%;
-    height: 40vh;
     flex-direction: column;
-    overflow-y: auto;
-    margin-top: 2vw;
+    padding: 15px;
 }
 
-.whiteboard-row-buttons{
-    margin: 0.5vw 1vw;
-    display: flex;
-    justify-content: space-around;
-}
 
-#whiteboard-selection-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+/* ------ SEARCH BAR ------ */
+.whiteboard-selection-container {
     width: 70%;
-    height: 60vh;
-    border: var(--border);
-    border-radius: 10px;
-    padding: 2.5vw;
-    background-color: white;
-    justify-content: flex-start;
-}
-
-.hr-style{
-    color: black;
-    width: 90%;
-}
-
-#homepage-container{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    background-color: white;
+    border: 2px solid black;
 }
 
-.search-form{
+.whiteboard-search {
+    justify-content: space-evenly;
+    display: flex;
+    padding-top: 15px;
+    margin: 15px 15px 0;
+}
+
+.search-whiteboards-text {
+    width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.search-form {
+    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.search-form > form {
+    width: 100%;
+    display: flex;
+}
+
+.search-form > form input {
+    width: 80%;
+    border-radius: 0;
+    outline: none;
+    font-size: 15px;
+}
+
+.search-form > form input:focus {
+    border: 3px solid black;
+}
+
+.search-form > form button {
+    width: 20%;
+    margin-left: 15px;
+}
+
+.button-swap-form {
+    width: 20%;
+}
+
+.main-container button {
     margin: 0;
+}
+
+.button-swap-form > form button {
+    width: 100%;
+}
+
+.homepage-custom-button {
+    text-transform: uppercase;
+    padding: 10px;
+    color: black;
+    cursor: pointer;
+    border: 1px solid black;
+    background-color: white;
+    height: 45px;
+    font-size: 13px;
+}
+
+.homepage-custom-button:hover,
+.homepage-custom-button:hover {
+    color: white;
+    background-color: black;
+    transition-duration: 200ms;
+    transition-timing-function: ease-out;
+}
+
+.homepage-custom-button:disabled {
+    background-color: #dddddd;
+    color: #aaaaaa;
+    cursor: not-allowed;
+}
+
+
+/* ------ HR STYLE ------ */
+.divider {
+    background-color: black;
+    width: 80%;
+    height: 1px;
+    margin: 15px;
+}
+
+
+/* ------ WHITEBOARDS SECTION ------ */
+.whiteboard-grid-container {
+    margin: 0 15px 15px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    border: 1px solid red;
+    justify-content: space-evenly;
+}
+
+.grid-item {
+    width: 200px;
+    height: 130px;
+    font-size: 30px;
+    text-align: center;
+    border: 1px solid green;
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding-bottom: 3vw;
+    margin: 15px 5px 5px;
 }
 
-.search-input-label{
-    width: 7vw;
-}
 
-#search-input {
-    border-radius: 5px;
-    background: #ffffff;
-    height: 3vw;
-    width: 40vw;
-    border: var(--border);
-    margin-right: 1vw;
-    padding-left: 1vw;
-}
 
-.homepage-button {
-    background: rgb(0, 196, 65);
-    color: #fff;
-    font-weight: bold;
-    cursor: pointer;
-    height: 3vw;
-    width: 5vw;
-    box-shadow: 0 6px 6px -3px rgba(0, 0, 0, 0.3);
-    border: 1px solid #ddd;
-    border-radius: 5px;
-}
 
-.selected-whiteboards{
-    background: rgb(91 109 246);
-    color: #fff;
-    font-weight: bold;
-    cursor: pointer;
-    height: 6vw;
-    width: 18vw;
-    overflow-y: auto;
-    overflow-x: auto;
-    font-size: 1.25vw;
-    box-shadow: 0 6px 6px -3px rgba(0, 0, 0, 0.3);
-    border: 1px solid #ddd;
-    border-radius: 5px;
-}
 
-.selected-whiteboards:hover{
-    background: rgb(41, 67, 253);
-}
 
-.homepage-button:hover {
-    background: rgb(0, 120, 34);
-}
 
-.nav-button {
-    background: rgb(91 109 246);
-    color: #fff;
-    font-weight: bold;
-    cursor: pointer;
-    height: 3vw;
-    width: 7vw;
-    overflow-x: auto;
-    max-width: 7vw;
-    font-size: 1vw;
-    box-shadow: 0 6px 6px -3px rgba(0, 0, 0, 0.3);
-    border: 1px solid #ddd;
-    padding: 0 1vw;
-    border-radius: 5px;
-}
+/*.whiteboard-selection {*/
+/*    margin: 15px;*/
+/*}*/
 
-.nav-button:hover {
-    background: rgb(41, 67, 253);
-}
 
-.normal_whiteboards{
-    display: flex;
-}
 
-/* The Modal (background) */
+/*#whiteboard-type{*/
+/*    display: flex;*/
+/*}*/
+
+/*.whiteboard-search{*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    width: 80%;*/
+/*}*/
+
+/*#whiteboards{*/
+/*    display: flex;*/
+/*    width: 90%;*/
+/*    height: 40vh;*/
+/*    flex-direction: column;*/
+/*    overflow-y: auto;*/
+/*    margin-top: 2vw;*/
+/*}*/
+
+/*.whiteboard-row-buttons{*/
+/*    margin: 0.5vw 1vw;*/
+/*    display: flex;*/
+/*    justify-content: space-around;*/
+/*}*/
+
+/*#whiteboard-selection-container{*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    align-items: center;*/
+/*    width: 70%;*/
+/*    height: 60vh;*/
+/*    border: var(--border);*/
+/*    border-radius: 10px;*/
+/*    padding: 2.5vw;*/
+/*    background-color: white;*/
+/*    justify-content: flex-start;*/
+/*}*/
+
+/*.hr-style{*/
+/*    color: black;*/
+/*    width: 90%;*/
+/*}*/
+
+/*#homepage-container{*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    align-items: center;*/
+/*}*/
+
+/*.search-form{*/
+/*    margin: 0;*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    align-items: center;*/
+/*    padding-bottom: 3vw;*/
+/*}*/
+
+/*.search-input-label{*/
+/*    width: 7vw;*/
+/*}*/
+
+/*#search-input {*/
+/*    border-radius: 5px;*/
+/*    background: #ffffff;*/
+/*    height: 3vw;*/
+/*    width: 40vw;*/
+/*    border: var(--border);*/
+/*    margin-right: 1vw;*/
+/*    padding-left: 1vw;*/
+/*}*/
+
+/*.homepage-button {*/
+/*    background: rgb(0, 196, 65);*/
+/*    color: #fff;*/
+/*    font-weight: bold;*/
+/*    cursor: pointer;*/
+/*    height: 3vw;*/
+/*    width: 5vw;*/
+/*    box-shadow: 0 6px 6px -3px rgba(0, 0, 0, 0.3);*/
+/*    border: 1px solid #ddd;*/
+/*    border-radius: 5px;*/
+/*}*/
+
+/*.selected-whiteboards{*/
+/*    background: rgb(91 109 246);*/
+/*    color: #fff;*/
+/*    font-weight: bold;*/
+/*    cursor: pointer;*/
+/*    height: 6vw;*/
+/*    width: 18vw;*/
+/*    overflow-y: auto;*/
+/*    overflow-x: auto;*/
+/*    font-size: 1.25vw;*/
+/*    box-shadow: 0 6px 6px -3px rgba(0, 0, 0, 0.3);*/
+/*    border: 1px solid #ddd;*/
+/*    border-radius: 5px;*/
+/*}*/
+
+/*.selected-whiteboards:hover{*/
+/*    background: rgb(41, 67, 253);*/
+/*}*/
+
+/*.homepage-button:hover {*/
+/*    background: rgb(0, 120, 34);*/
+/*}*/
+
+/*.nav-button {*/
+/*    background: rgb(91 109 246);*/
+/*    color: #fff;*/
+/*    font-weight: bold;*/
+/*    cursor: pointer;*/
+/*    height: 3vw;*/
+/*    width: 7vw;*/
+/*    overflow-x: auto;*/
+/*    max-width: 7vw;*/
+/*    font-size: 1vw;*/
+/*    box-shadow: 0 6px 6px -3px rgba(0, 0, 0, 0.3);*/
+/*    border: 1px solid #ddd;*/
+/*    padding: 0 1vw;*/
+/*    border-radius: 5px;*/
+/*}*/
+
+/*.nav-button:hover {*/
+/*    background: rgb(41, 67, 253);*/
+/*}*/
+
+/*.normal_whiteboards{*/
+/*    display: flex;*/
+/*}*/
+
+
+/* ------ MODAL STYLING ------*/
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
@@ -142,7 +280,6 @@
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-/* Modal Content/Box */
 .modal-content {
     background-color: #fefefe;
     margin: 15% auto; /* 15% from the top and centered */
@@ -151,7 +288,6 @@
     width: 80%; /* Could be more or less, depending on screen size */
 }
 
-/* Close Button */
 .close {
     color: #aaa;
     float: right;
