--- a/src/app/web/src/main/webapp/whiteboard.html
+++ b/src/app/web/src/main/webapp/whiteboard.html
@@ -109,6 +109,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.1/fabric.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script type="module" src="whiteboard-main.js" defer></script>
+    <script type="module" src="assets/javascript/whiteboard-main.js" defer></script>
 </body>
 </html>
