--- a/src/app/web/src/main/webapp/assets/css/common/top_bar.css
+++ b/src/app/web/src/main/webapp/assets/css/common/top_bar.css
@@ -1,32 +1,38 @@
-@import url("common.css");
+/*@import url("common.css");*/
 
-.topnav {
+/* styles.css */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    height: 100vh;
     display: flex;
-    background-color: var(--base-color);
-    flex-direction: row;
+    flex-direction: column;
+    max-width: 100vw;
+    overflow: hidden;
+}
+
+#whiteboard {
+    flex-grow: 1;
+}
+
+.navbar {
+    background-color: #4c0bce;
+    color: white;
+    padding: 0.5rem;
+    display: flex;
     justify-content: space-between;
-    width: 100%;
+    align-items: center;
 }
 
-#left-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 20%;
+.navbar button {
+    margin: 0 0.25rem;
 }
 
-#left-container .custom-generic-button {
-    width: 50%;
-    margin: 10px;
-}
-
-#right-container{
-    display: flex;
-    flex-direction: row;
-    width: 10%;
-}
-
-#right-container .custom-generic-button {
-    width: 100%;
-    margin: 10px;
+.navbar .bi {
+    font-size: 1.25rem;
 }
