--- a/src/app/web/src/main/webapp/assets/css/homepage.css
+++ b/src/app/web/src/main/webapp/assets/css/homepage.css
@@ -1,205 +1,84 @@
-.main-container {
+.form-inline {
     display: flex;
     align-items: center;
-    flex-direction: column;
-    padding: 15px;
-}
-
-
-/* ------ SEARCH BAR ------ */
-.whiteboard-selection-container {
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    border: 2px solid black;
-}
-
-.whiteboard-search {
-    justify-content: space-evenly;
-    display: flex;
-    padding-top: 15px;
-    margin: 15px 15px 0;
-}
-
-.search-whiteboards-text {
-    width: 20%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.search-form {
-    width: 60%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.search-form > form {
-    width: 100%;
-    display: flex;
-}
-
-.search-form > form input {
-    width: 80%;
-    border-radius: 0;
-    outline: none;
-    font-size: 15px;
-}
-
-.search-form > form input:focus {
-    border: 3px solid black;
-}
-
-.search-form > form button {
-    width: 20%;
-    margin-left: 15px;
-}
-
-.button-swap-form {
-    width: 20%;
-}
-
-.main-container button {
-    margin: 0;
-}
-
-.button-swap-form > form button {
     width: 100%;
 }
 
-.homepage-custom-button {
-    text-transform: uppercase;
-    padding: 10px;
-    color: black;
-    cursor: pointer;
-    border: 1px solid black;
-    background-color: white;
-    height: 45px;
-    font-size: 13px;
+.form-inline .form-control {
+    flex-grow: 1;
 }
 
-.homepage-custom-button:hover,
-.homepage-custom-button:hover {
-    color: white;
-    background-color: black;
-    transition-duration: 200ms;
-    transition-timing-function: ease-out;
+.form-inline button {
+    white-space: nowrap;
 }
 
-.homepage-custom-button:disabled {
-    background-color: #dddddd;
-    color: #aaaaaa;
-    cursor: not-allowed;
+@media (min-width: 576px) {
+    .form-inline input[type="text"] {
+        max-width: none;
+    }
 }
 
-
-/* ------ HR STYLE ------ */
-.divider {
-    background-color: black;
-    width: 80%;
-    height: 1px;
-    margin: 15px;
-}
-
-div {
-    border: 1px solid red;
-}
-
-/* ------ WHITEBOARDS SECTION ------ */
-.whiteboard-grid-container {
-    margin: 0 15px 15px;
-    display: grid;
-    grid-template-columns: auto auto auto;
-    border: 1px solid red;
-    justify-content: space-evenly;
-}
-
-.grid-item-add {
-    width: 300px;
-    height: 160px;
-    font-size: 30px;
-    text-align: center;
-    /*border: 1px solid green;*/
-    display: flex;
-    margin: 15px 5px 5px;
-}
-
-.grid-item-whiteboard {
+.aspect-ratio-box {
+    width: 100%;
+    padding-top: 56.25%;
     position: relative;
-    width: 300px;
-    height: 160px;
-    font-size: 30px;
-    text-align: center;
-    border: 2px solid black;
-    display: flex;
-    margin: 15px 5px 5px;
 }
 
-.whiteboard-snapshot {
-    height: inherit;
-    width: inherit;
-}
-
-.whiteboard-name {
+.aspect-ratio-box img {
     position: absolute;
-    color: black;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, 50%);
-    text-align: center;
-    font-size: 20px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+}
+
+.btn-add {
+    display: block;
+    width: 100%;
+    padding-bottom: 56.25%;
+    font-size: 4em;
+    color: #007bff;
+    line-height: 0;
+    border-radius: 0.25rem;
+}
+
+.card-img-top-wrapper {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
+}
+
+.card-img-top-wrapper img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.card-img-top-wrapper .btn-danger {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: none;
+}
+
+.card .btn-danger {
+    margin-right: 0.5rem;
+    margin-top: 0.25rem;
+}
+
+.cart-img-top {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .delete-whiteboard-button {
     position: absolute;
-    top: 3px;
-    right: 3px;
-    z-index: 1;
-    background-color: rgba(255, 0, 0, 0.6);
-    width: 30px;
-    height: 30px;
-    line-height: 15px;
-    text-align: center;
-    border: 1px solid black;
-    border-radius: 10%;
-    font-size: 25px;
-    color: white;
-}
-
-/* ------ MODAL STYLING ------*/
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
     top: 0;
-    width: 50%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-}
-
-.modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-}
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+    right: 0;
 }
